# MemorySystem_agent-memory-layer

./: .gitignore  README.md  mini_memGPT.py  pyproject.toml
agent_memory/: __init__.py  agent.py  memory_layer.py  schemas.py
agent_memory/conflicts/: __init__.py  llm.py  rule_based.py
agent_memory/context/: __init__.py  builder.py
agent_memory/evaluation/: __init__.py  runner.py
agent_memory/extractors/: __init__.py  llm.py  rule_based.py
agent_memory/resolvers/: __init__.py  llm.py  scope_resolver.py
agent_memory/retrievers/: __init__.py  chroma.py  keyword.py
agent_memory/stores/: __init__.py  chroma_store.py  memory_store.py  project_store.py  recall_store.py  session_store.py
examples/: __init__.py  agent_demo.py  eval_demo.py  memory_layer_demo.py  recall_store_demo.py
tests/: test_chroma_integration.py  test_conflict_resolver.py  test_context_budget_session.py  test_eval_runner.py  test_llm_conflict_resolver.py  test_llm_extractor.py  test_llm_scope_resolver.py  test_memory_agent.py  test_memory_layer.py  test_memory_layer_conflicts.py  test_memory_layer_session.py  test_memory_provenance.py  test_memory_store.py  test_project_store.py  test_recall_store.py  test_retriever_context.py  test_rule_based_extractor.py  test_scope_resolver.py  test_session_store.py
