[project]
name = "agent-memory-layer"
version = "0.1.0"
description = "A hybrid memory layer for AI agents."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
chroma = ["chromadb>=0.5.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
